// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "white",
      "borderRadius": 10,
      "elevation": 4,
      "flexDirection": "row",
      "margin": 15,
      "marginHorizontal": 15,
    }
  }
  testID="container"
>
  <View
    style={
      Object {
        "justifyContent": "center",
        "marginLeft": 10,
      }
    }
  >
    <Text />
  </View>
  <TextInput
    allowFontScaling={true}
    editable={true}
    onChangeText={[MockFunction]}
    placeholder="Search books"
    placeholderTextColor="#8C93A3"
    rejectResponderTermination={true}
    returnKeyType="search"
    style={
      Array [
        Object {
          "color": "#092D5D",
          "flex": 1,
          "fontSize": 14,
          "paddingLeft": 10,
          "paddingVertical": 6,
        },
        undefined,
      ]
    }
    testID="input"
    underlineColorAndroid="transparent"
    value=""
  />
</View>
`;

exports[`Input 2`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "white",
      "borderRadius": 10,
      "elevation": 4,
      "flexDirection": "row",
      "margin": 15,
      "marginHorizontal": 15,
    }
  }
  testID="container"
>
  <View
    style={
      Object {
        "justifyContent": "center",
        "marginLeft": 10,
      }
    }
  >
    <Text />
  </View>
  <TextInput
    allowFontScaling={true}
    editable={true}
    onChangeText={
      [MockFunction] {
        "calls": Array [
          Array [
            "test",
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
    placeholder="Search books"
    placeholderTextColor="#8C93A3"
    rejectResponderTermination={true}
    returnKeyType="search"
    style={
      Array [
        Object {
          "color": "#092D5D",
          "flex": 1,
          "fontSize": 14,
          "paddingLeft": 10,
          "paddingVertical": 6,
        },
        undefined,
      ]
    }
    testID="input"
    underlineColorAndroid="transparent"
    value="test"
  />
  <View
    accessible={true}
    focusable={true}
    hitSlop={
      Object {
        "bottom": 10,
        "left": 20,
        "right": 20,
        "top": 10,
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "justifyContent": "center",
        "opacity": 1,
        "paddingHorizontal": 8,
        "paddingVertical": 5,
      }
    }
    testID="clear"
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={24}
      bbWidth={24}
      focusable={false}
      height={24}
      meetOrSlice={0}
      minX={0}
      minY={0}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "flex": 0,
            "height": 24,
            "width": 24,
          },
        ]
      }
      vbHeight={512}
      vbWidth={320}
      width={24}
    >
      <RNSVGGroup>
        <RNSVGPath
          d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"
          fill={4288391370}
          propList={
            Array [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</View>
`;
